Api yazımına başlandı.

--- a/PhotoStudioFS/appsettings.json
+++ b/PhotoStudioFS/appsettings.json
@@ -6,12 +6,12 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=94.73.147.147;Database=sinemkobaner_com_photostudio;User=sinem_admin;Password=Ogvbsiabkckq1;TreatTinyAsBoolean=true;"
+    "DefaultConnection": "Server=localhost;Database=sinemkobaner_com_photostudio;User=root;Password=Ogvbsiabkckq1;TreatTinyAsBoolean=true;"
   },
   "AWS": {
     "AccessKey": "AKIATMQSGWZN55T2NQ7A",
     "SecretAccessKey": "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",
     "BucketName": "sirketyedek"
-  },
-  "postpublish": [ "dotnet ef database update" ]
+  }
+  //"postpublish": [ "dotnet ef database update" ]
 }
