--- a/PhotoStudioFS/PhotoStudioFS.csproj
+++ b/PhotoStudioFS/PhotoStudioFS.csproj
@@ -27,4 +27,9 @@
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="2.2.0" />
   </ItemGroup>
 
+
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
