Added creating appointment to specific customer, alerts and some bug fixes

--- a/PhotoStudioFS/appsettings.json
+++ b/PhotoStudioFS/appsettings.json
@@ -7,6 +7,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Database=sinemkobaner_com_photostudio;User=root;Password=Ogvbsiabkckq1;TreatTinyAsBoolean=true;"
+    //"DefaultConnection": "Server=localhost;Database=sinemkobaner_com_deneme;User=sinem_admin;Password=Ogvbsiabkckq1;TreatTinyAsBoolean=true;"
   },
   "AWS": {
     "AccessKey": "AKIATMQSGWZN55T2NQ7A",
