Api Authantication tamamlandı

--- a/Api.PhotoStudioFS/appsettings.json
+++ b/Api.PhotoStudioFS/appsettings.json
@@ -9,7 +9,7 @@
     //"DefaultConnection": "Server=localhost;Database=sinemkobaner_com_photostudio;User=root;Password=Ogvbsiabkckq1;TreatTinyAsBoolean=true;"
     "DefaultConnection": "Server=localhost;Database=sinemkobaner_com_deneme;User=sinem_admin;Password=Ogvbsiabkckq1;TreatTinyAsBoolean=true;"
   },
-  "JwtKey": "asdadasdasdad6546a5sd4as65d1323ad1a3s2das1d3",
-  "JwtIssuer": "https://localhost:5001",
-  "JwtExpireDays": 30
+  "JwtKey": "%D*G-KaPdRgUkXp2s5v8y/B?E(H+MbQe",
+  "JwtIssuer": "http://sinemkobaner.com",
+  "JwtExpireDays": 90
 }
