--- a/PhotoStudioFS/web.config
+++ b/PhotoStudioFS/web.config
@@ -14,6 +14,9 @@
         <environmentVariable name="ASPNETCORE_ENVIRONMENT" value="Development" />
       </environmentVariables>
     </aspNetCore>
+    <staticContent>
+      <clientCache cacheControlMode="UseMaxAge" cacheControlMaxAge="30.00:00:00" />
+    </staticContent>
   </system.webServer>
 
 
