--- a/PhotoStudioFS/appsettings.json
+++ b/PhotoStudioFS/appsettings.json
@@ -6,8 +6,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=sinemkobaner_com_photostudio;User=root;Password=Ogvbsiabkckq1;TreatTinyAsBoolean=true;"
-    //"DefaultConnection": "Server=localhost;Database=sinemkobaner_com_deneme;User=sinem_admin;Password=Ogvbsiabkckq1;TreatTinyAsBoolean=true;"
+    //"DefaultConnection": "Server=localhost;Database=sinemkobaner_com_photostudio;User=root;Password=;TreatTinyAsBoolean=true;"
+    "DefaultConnection": "Server=localhost;Database=sinemkobaner_com_deneme;User=sinem_admin;Password=Ogvbsiabkckq1;TreatTinyAsBoolean=true;"
   },
   "AWS": {
     "AccessKey": "AKIATMQSGWZN55T2NQ7A",
